src/App.css
.main {
    padding: 20px 0px;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(5, 1fr);
    grid-column-gap: 10px;
    grid-row-gap: 10px;
}

.intro {
    grid-area: 1 / 1 / 2 / 3;
}
.auth {
    grid-area: 1 / 3 / 2 / 4;
}
.profile {
    grid-area: 2 / 3 / 4 / 4;
}
.signIn {
    grid-area: 2 / 1 / 4 / 3;
}
.friend {
    grid-area: 4 / 1 / 6 / 2;
}
.entry {
    grid-area: 4 / 2 / 6 / 4;
}

.intro {
    background: #262626;
    color: #eeba2c;
    justify-content: center;
    align-items: center;
    padding: 10px 20px;
    border-radius: 30px;
}

.auth {
    background: #262626;
    color: #eeba2c;
    justify-content: center;
    align-items: center;
    padding: 10px 20px;
    border-radius: 30px;
}

.auth form {
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.auth input {
    background: #262626;
    color: #eeba2c;
    border-radius: 30px;
    border-color: #eeba2c;
    border-style: solid;
    padding: 2%;
    padding-left: 4%;
}

.auth input:focus {
    outline: none;
}

.auth button {
    background: #eeba2c;
    color: #262626;
    border-radius: 30px;
    border-color: #eeba2c;
    border-style: solid;
    padding: 2%;
    box-shadow: 0 9px rgb(238 186 44 / 54%);
}

.auth button:hover {
    background-color: #262626;
    color: #eeba2c;
}

.auth button:active {
    outline: none;
    background-color: #262626;
    color: #eeba2c;
    box-shadow: 0 5px rgb(238 186 44 / 54%);
    transform: translateY(4px);
}

.profile {
    background: #262626;
    color: #eeba2c;
    justify-content: center;
    align-items: center;
    padding: 10px 20px;
    border-radius: 30px;
    text-align: center;
}

.signIn {
    background: #262626;
    color: #eeba2c;
    justify-content: center;
    align-items: center;
    padding: 10px 20px;
    border-radius: 30px;
}

.signIn img {
    max-width: 80%;
    height: auto;
}

.friend {
    background: #262626;
    color: #eeba2c;
    justify-content: center;
    align-items: center;
    padding: 10px 20px;
    border-radius: 30px;
}

.entry {
    background: #262626;
    color: #eeba2c;
    justify-content: center;
    align-items: center;
    padding: 10px 20px;
    border-radius: 30px;
}

